Fixed a few page specific spacing issues.

--- a/mattbierner_com/static/style/page.scss
+++ b/mattbierner_com/static/style/page.scss
@@ -1,5 +1,13 @@
 @import "common";
 
+article figure {
+  padding-bottom: 1em;
+}
+
+article ul, article ol {
+  padding-bottom: 0.8em;
+}
+
 #secondary_header {
   position: absolute;
   top: 1em;
@@ -61,6 +69,7 @@ article section figure figcaption {
   display: block;
   width: col_width(5);
 }
+
 
 
 
